Bug 441070 - "Folder is empty" text label consumes mouse events on top of it
Summary: "Folder is empty" text label consumes mouse events on top of it
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 21.08.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-17 07:12 UTC by nttkde
Modified: 2024-01-16 12:46 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nttkde 2021-08-17 07:12:23 UTC
Not sure if this is really a 'bug' but maybe unintentional so here's the report anyways.

When you have opened an empty folder, you can't right-click on top of the "Folder is empty" text in the middle; the text label eats the mouse events.
If you drag from the label it moves the whole window.
So functionality-wise it's a bit weirdly separate from rest of the view.

Maybe adding 
m_placeholderLabel->setAttribute(Qt::WA_TransparentForMouseEvents);
would work?
Comment 1 Jan Paul Batrina 2021-08-17 11:25:20 UTC
Thanks for the bug report and fix suggestion!

I can confirm with dolphin built from git master.

I can also confirm that adding m_placeholderLabel->setAttribute(Qt::WA_TransparentForMouseEvents) in dolphinview.cpp fixes the problem. I don't have a touch screen for testing, but this fix should also work for touch events since they are sent as mouse events unless Qt::WA_AcceptTouchEvents is set.

If you have the time, please make a merge request at https://invent.kde.org/system/dolphin/-/merge_requests for this fix.
Comment 2 Nate Graham 2021-08-17 15:58:44 UTC
Yep, can confirm that that fixes it and is an appropriate fix. Someone please feel free to submit a merge request.
Comment 3 Ömer Fadıl USTA 2021-08-23 05:04:52 UTC
Hello , Could you please make a test in these 2 conditions :
1- When creating a new file instead of putting a Russian/crillic name, give a name like abc.txt  and try if it crashes again or not

2- Disable the baloo ( on commandline use 
balooctrl disable ) and wait a few seconds then create your file and try it again

* I know that there is a bug about baloo which causes it crash but it doesnt have to crash whole system ( and btw i will fix it within 1 week )

And also after crash could you share with us the coredumpctl logs ?
( in commandline/konsole 

coredumpctl list

then find the crash then 

coredumpctl dump applicationName ( example : coredumpctl dump /usr/bin/kmix )

Thank you
Comment 4 Ömer Fadıl USTA 2021-08-23 05:06:07 UTC
opps ignore my last entry ( i prepared that one for another bug but paste in wrong bug report ) sorry
Comment 5 Bug Janitor Service 2024-01-15 12:28:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/701
Comment 6 Jin Liu 2024-01-16 12:37:49 UTC
Git commit c984badee32f691a787c3dea202ef5ef5446758b by Jin Liu.
Committed on 16/01/2024 at 13:37.
Pushed by genericity into branch 'master'.

Fix: "empty folder" placeholder text eating mouse events

M  +3    -5    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/c984badee32f691a787c3dea202ef5ef5446758b
Comment 7 Jin Liu 2024-01-16 12:45:31 UTC
Git commit 59273a432b7a933864306cf5ab32fb1de1ac445a by Jin Liu.
Committed on 16/01/2024 at 13:45.
Pushed by genericity into branch 'release/24.02'.

Fix: "empty folder" placeholder text eating mouse events

M  +3    -5    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/59273a432b7a933864306cf5ab32fb1de1ac445a