Fix: "empty folder" placeholder text eating mouse events

BUG: 441070